Proof read corrections

--- a/book/dzien02.tex
+++ b/book/dzien02.tex
@@ -29,8 +29,8 @@ Gdy wychodziłem z zakupami zaczęli mnie pytać, czy wybrałbym się może do f
 Nie mieliśmy jednak na to czasu, pewnie przyjdzie nam jeszcze zostać zaproszonym na taką wycieczkę.
 Na pożegnanie spytali mnie tylko skąd jestem.
 „Polonia, Fiat” - odpowiedziałem, bo o ile nazywając Polskę po imieniu często trzeba to było powtórzyć, tak nazywając ja Fiatem rozwiewa się wszystkie wątpliwości.
-Na Kubie jeździ dużo (około połowa) klasycznych amerykańskich samochodów sprzed rewolucji, które świetnie zachowały się do dzisiaj (jeśli „zachowały” może opisać nadwozie z kitu i zawieszenie wybrednie tolerujące tylko niektóre drogi), rosyjskich Ład, Fiatów identycznych do 126 i 125, ale numerowanych w rozmaity sposób.
-Najczęściej pojawiającą się liczbą na małym Fiacie było 450.
+Na Kubie jeździ dużo (około połowa) klasycznych amerykańskich samochodów sprzed rewolucji, które świetnie zachowały się do dzisiaj (jeśli „zachowały” może opisać nadwozie z kitu i zawieszenie wybiórczo tolerujące tylko niektóre drogi), rosyjskich Ład, Fiatów identycznych z 126 i 125, ale numerowanych w rozmaity sposób.
+Najczęściej pojawiającą się liczbą na małym Fiacie była 450.
 Po powrocie do Polski koniecznie to sprawdzę!
 Może taki samochód faktycznie figurował też pod tym numerem.
 Ostatnią i najmniej liczną grupą są współczesne kompakty, ale bardzo wybrednie dobierane modele.
@@ -41,7 +41,7 @@ Widziałem nawet dwukrotnie egzemplarz z takim właśnie (”Polski Fiat”) nap
 Kubańczycy oczywiście mówią to po hiszpańsku.
 Stad określenie Fiat precyzyjnie opisuje im nasze pochodzenie.
 \par Drogi w Hawanie są koszmarne.
-Pełne zarówno dziur, jak i rozmaitych wybojów, sięgających średnio 10-15cm, w porywach do 25cm.
+Pełne zarówno dziur, jak i rozmaitych wybojów, sięgających średnio 10-15 cm, w porywach do 25 cm.
 Najechanie nawet na przeciętny wybój mogłoby urwać koło.
 Nam przynajmniej jeszcze udało się do tego nie doprowadzić.
 Poza Hawaną drogi są lepsze - a przynajmniej autostrada, co ciekawe nazywająca się A4, którą jechaliśmy.
@@ -53,8 +53,8 @@ Okazało się, że facet nazywa się Hose (a przynajmniej tak się to wymawia.
 Ciężko mi prorokować, jak to napisać, może Jose?) i jest pracownikiem ochrony Kubańskiego Parku Narodowego, wpisanego na listę światowego dziedzictwa kulturowego Unesco.
 Puszczał nam swoją ulubioną muzykę z telefonu, tłumaczył zwyczaje jazdy na Kubie, pokazywał zdjęcia żony i córki, opowiadał co możemy zrobić, żeby przenocować w Viñales.
 Na Kubie obowiązuje ruch prawostronny, ale jeździ się lewym pasem.
- Prawy jest często dziurawy, więc jeżdżą nim konie i ciężarówki z ogromnymi kołami, którym nie strach taka droga.
-Tradycyjnie należy też zatrąbić przy wyprzedzaniu, ale my sobie to odpuścimy, bo ten odgłos co chwile jest strasznie irytujący.
+Prawy jest często dziurawy, więc jeżdżą nim konie i ciężarówki z ogromnymi kołami, którym nie straszna taka droga.
+Tradycyjnie należy też zatrąbić przy wyprzedzaniu, ale my sobie to odpuścimy, bo ten odgłos co chwilę jest strasznie irytujący.
 Dowiedzieliśmy się też, że mrugnięcie światłami na autostopowiczów oznacza, że nie weźmiemy ich z powodu pełnego auta lub kończącego się paliwa.
 Dziwny sposób...
 rzadko widzieliśmy, żeby ktoś zatrzymywał się ich zabrać.
@@ -67,7 +67,7 @@ Hose kilkukrotnie prosił, żeby spuścić szyby i pytał miejscowych o drogę, 
 Pokazał nam, gdzie jest wypożyczalnia łódek, na którą planujemy się jutro wybrać.
 Dowiedziałem się też od niego, że ptaki, których jest mnóstwo na Kubie to sępy.
 W stadach wirują nad Kubą i szukają pożywienia.
-Na koniec zatrzymaliśmy się przy jakimś barze, po środku jakiejś wsi - która okazała się przedmieściami Viñales.
+Na koniec zatrzymaliśmy się przy jakimś barze, pośrodku jakiejś wsi - która okazała się przedmieściami Viñales.
 Na tych oto przedmieściach, w przydrożnym barze Hose zaproponował nam sok i jedzenie na jego koszt.
 Sokiem było smoothie z mango, za to posiłek był niezwykły.
 Składał się z jakiś kopytek z ciasta, którego konsystencja przypominała krzyżówkę kaszy i klusek - w dwóch wariantach - zwykłym i panierowanym.
@@ -85,7 +85,7 @@ Umówiliśmy się na jutro rano na wycieczkę konną.
 Usłyszeliśmy od razu, że jego kolega ma pokój do wynajęcia - właśnie tego szukaliśmy.
 W nadziei, że nie będzie to wyzysk pojechaliśmy go obejrzeć, ale właściciela nie było - miał się pojawić za parę godzin, z powodu wizyty u dentysty.
 \par W samochodzie zostało nam pół baku paliwa.
-Ciężko określić spalanie (a ta informacja jest nam potrzebna do oszacowania, kiedy musimy zatankować), bo droga była paskudna, ciągle hamowaliśmy przed dziurami i jechaliśmy w górach.
+Ciężko określić spalanie (a potrzebowaliśmy je znać, aby oszacować, kiedy musimy zatankować), bo droga była paskudna, ciągle hamowaliśmy przed dziurami i jechaliśmy w górach.
 Hose ostrzegał nas, że na Kubie jest mało stacji benzynowych, ale chyba będziemy dmuchać na zimne i tankować do pełna przy możliwej okazji.
 Wyszliśmy na centrum (to duże słowo na jedną ulicę z jednopiętrowymi domkami) Viñales i szukaliśmy baru, w którym popijając alkohol poczekamy na właściciela wynajmowanego pokoju.
 Jak się okazało - trafiliśmy na bar z najlepsza pinacoladą jaka piłem!
@@ -101,8 +101,8 @@ I udało się!
 Powieszę go sobie w pracy albo nad łóżkiem.
 Wróciliśmy po około dwóch godzinach, ale właściciela nie było.
 Za to jakiś jego chyba-pracownik kręcący się po posiadłości odpowiedział nam, że za około pół godziny powinien już być - oby!
-Gdy przyjechał okazało się, że pokój jest całkiem tani, co zamknęło temat decyzji o noclegu, bo standard pokoju był wysoki, więc tylko tego jednego się obawialiśmy - że będzie drogi.
-Realizując plan dzisiejszego dnia wypożyczyliśmy rowery i pojechaliśmy nad miejscowe jezioro Presa el Salto.
+Gdy przyjechał okazało się, że pokój jest całkiem tani. Standard pokoju był wysoki, więc jedyne czego się obawialiśmy, to ceny.
+Realizując plan dnia wypożyczyliśmy rowery i pojechaliśmy nad miejscowe jezioro Presa el Salto.
 Rowery były w słabym stanie, w szczególności hamulce, ale dało się jechać - powoli i ostrożnie.
 Na miejscu na zmianę pilnowaliśmy rzeczy i pływaliśmy.
 Na zmianę, to znaczy zawsze ktoś czekał na brzegu pilnując naszego dobytku, w tym cennych jak złoto paszportów.
@@ -112,9 +112,9 @@ Czerwone ziemie czasami świadczą o obecności żelaza, ale nie jestem przekona
 Może to jakiś związek fosforu?
 Fosfor przyjmuje wiele barw w swoich związkach, przez co nazywa się je kolorami.
 Za to fosfor czerwony jest (a przynajmniej tak mi się wydaje) silnie łatwopalny, więc nie będzie raczej składnikiem gleby (bo utleniony zmieniłby kolor).
-Dno jeziora było kamieniste do pewnego momentu, dalej było gliniane.
+Bliżej brzegu dno jeziora było kamieniste, a dalej gliniaste.
 Nie wiem czy gorsze są wbijające się w stopy kamienie, czy mułowe dno.
-Wróciliśmy rowerami, umyliśmy się i ruszyliśmy po kolacje.
+Wróciliśmy rowerami, umyliśmy się i ruszyliśmy na kolację.
 Pełen entuzjazmu wybrałem miejsce, w którym spożyjemy posiłek, ale wyszło koniec końców na to, że nie był to najlepszy wybór.
 Ja zamówiłem szaszłyk wieprzowy, natomiast Kozi stek ze świni.
 Mój szaszłyk był taki strasznie zwykły.
