--- a/book/dzien03.tex
+++ b/book/dzien03.tex
@@ -3,8 +3,8 @@
 
 Postanowiliśmy, że każdemu właścicielowi pokoju, który wynajmujemy, nadawać będziemy imiona.
 Pierwszy z pokoi, ten w Hawanie należał do Gonzalesa.
-Drugi z kolei, ten tutaj - w Viñales, należy do faceta, którego ochrzciliśmy imieniem Pacho, gdzie „ch” wymawiane jest jako zgłoska pomiędzy „cz” i „ć”.
-Pacho był wobec nas bardzo uprzejmy i wczoraj zaoferował nam darmowy drink, ale odmówiliśmy.
+Drugi z kolei, tutaj - w Viñales, należy do faceta, którego ochrzciliśmy imieniem Pacho, gdzie „ch” wymawiane jest jako zgłoska pomiędzy „cz” i „ć”.
+Pacho był wobec nas bardzo uprzejmy i wczoraj zaoferował nam darmowego drinka, ale odmówiliśmy.
 Dziś rano zostało nam przygotowane śniadanie z talerzem bananów, talerzem czerwonego melona i ananasów oraz trzecim talerzem z arbuzami i różowym melonem.
 Wszystkie owoce były pokrojone tak, aby stanowić jeden kęs.
 Co więcej, dzisiejszy poranek był tym momentem, w którym zdałem sobie sprawę z obecności dwóch rodzajów czerwonego melona (oczywiście żaden z nich nie jest melonem, ale roboczo przyjmują tę nazwę, z powodu mojej nieznajomości ich faktycznej tożsamości gatunkowej).
@@ -18,9 +18,9 @@ To właśnie z tego różowego dwukrotnie piliśmy smoothie w Hawanie.
 Do śniadania dostaliśmy też ciepłe mleko, jajecznicę, sucharki, masło, żółty ser i jakąś mielonkę pociętą w trójkąty, której żaden z nas nie spróbował.
 Banany były nieobrane - widać było, że są dojrzałe, ich skórka była pociemniała.
 Po śniadaniu wsiedliśmy w samochód i pojechaliśmy na plantacje tytoniu, gdzie umówieni byliśmy na przejażdżkę konną.
-Na miejscu przywitał nas facet, który wyglądał jak kowboj z łesternu.
+Na miejscu przywitał nas facet, który wyglądał jak kowboj z western'u.
 Zamówiona wycieczka miała być dwuosobowa (plus przewodnik), bo w ten sposób moglibyśmy dowolnie zwalniać jazdę, by porobić zdjęcia.
-Z tego powodu odbywała się godzinę przed pierwsza oferowana wycieczką: o 9 rano.
+Z tego powodu odbywała się godzinę przed pierwszą oferowaną wycieczką: o 9 rano.
 Tak przynajmniej się umówiliśmy.
 Widocznie nie tylko my chcieliśmy z tego skorzystać, bo wraz z nami na zbiórce stawiła się para Belgów.
 Pojechaliśmy na kubańskie rancho, gdzie każdy z nas otrzymał konia do jazdy.
@@ -31,24 +31,24 @@ Wycieczka odbywała się po Kubańskim Parku Narodowym.
 
 \szQuote{Słowo Cuba oznacza miejsce, w którym są góry i żyzne ziemie.}
 \noindent Park ten pełen jest spektakularnych widoków dzikiej natury, gór, palm, ścieżek z czerwonej ziemi, zieleni dookoła nich.
-Na Kubie uprawiane są trzy rodzaje ziemniaka: pataty, manioki oraz trzeci rodzaj, którego nazwy nie pamiętam, ale jego krzaki mają liście łudząco podobne do charakterystycznego symetrycznego siedmiolistnego zioła z ząbkowanymi krawędziami.
-Mijaliśmy plantacje każdego z nich (ziemniaków!), jak i pola trzciny cukrowej, która wygląda identycznie do przerośniętej kukurydzy, tylko bez kukurydzy.
+Na Kubie uprawiane są trzy rodzaje ziemniaka: bataty, manioki oraz trzeci rodzaj, którego nazwy nie pamiętam, ale jego krzaki mają liście łudząco podobne do charakterystycznego symetrycznego siedmiolistnego zioła z ząbkowanymi krawędziami.
+Mijaliśmy plantacje każdego z rodzajów ziemniaków, jak i pola trzciny cukrowej, która wygląda jak przerośnięta kukurydza, tylko bez kukurydzy.
 Nasz przewodnik nieustannie popędzał konie krzycząc ich imiona w losowej kolejności.
-Podejrzewam, że ma to sprawić turystom radość, podobnie jak nieustannie trąbiący taksówkarze.
+Podejrzewam, że to miało sprawić turystom radość, podobnie jak nieustannie trąbiący taksówkarze.
 Pierwszym przystankiem wycieczki była plantacja kawy.
 Zatrzymaliśmy się, zsiedliśmy z koni i rozprostowaliśmy nogi.
 \par Krzewy kawowe owocują między wrześniem a grudniem.
-W tym czasie regularnie zbierane są tu owoce kawowca, które stają się czerwone - dojrzałe.
+W tym czasie regularnie zbierane są tu owoce kawowca, które stają się czerwone, gdy dojrzeją.
 Wśród krzewów sadzi się drzewa nazywane przez Kubańczyków „golasami”, ponieważ posiadają liście tylko w bardzo krótkim okresie, gdy kawa woli mieć mniej światła i gubią je, kiedy kawowce potrzebują go więcej.
 Na terenie parku narodowego pracownicy nie mogą używać żadnych nowoczesnych maszyn, w tym ciągników rolniczych, więc kawa zbierana jest ręcznie.
 Dzięki temu park widnieje na liście światowego dziedzictwa kulturowego Unesco.
-Owoce kawowca miażdżone są w ogromnym drewnianym moździerzu o nazwie „pilon”, którego pomysł pochodzi z Afryki.
+Owoce kawowca miażdżone są w ogromnym drewnianym moździerzu o nazwie „pilon”, który wywodzi się z Afryki.
 Miażdżenie nie polega natomiast na tym samym, co przypraw w klasycznym moździerzu.
 Tu wystarczy jedno uderzenie drewnianego młota, aby owoce pękły, dzięki czemu można łatwo ręcznie wydzielić ziarno.
 Kubańczycy mają swój własny taniec, który towarzyszy im przy ugniataniu owoców, nazywają go Pilon Dance.
-Na odwiedzonej przez nas plantacji uprawiany jest gatunek arabica.
-Na Kubie uprawia się również drugi gatunek kawy - robusta.
-Arabica jest aromatyczna, za to robusta jest bardziej kwaśna.
+Na odwiedzonej przez nas plantacji uprawiana jest Arabica.
+Na Kubie uprawia się również drugi gatunek kawy - Robusta.
+Arabica jest aromatyczna, a Robusta bardziej kwaśna.
 Ziarna kawy następnie są palone w stalowym pudle.
 W zależności od rozmiaru pudełka oraz czasu palenia uzyskuje się różne efekty końcowego bukietu aromatycznego kawy.
 Uprażone ziarna łatwo kruszą się między zębami i szczerze mówiąc wydają się świetną przekąska do chrupania.
@@ -60,7 +60,7 @@ Kwiaty te są koloru białego, za to produkowany z nich miód jest mniej słodki
 Do tropienia uli wykorzystywane są psy.
 W ulu wycinany jest okrągły otwór i część zgromadzonego miodu jest wybierana.
 Tak oszczędne zbieranie pozwala pszczołom odbudować ul, przez co nie stają się narażone na wyginiecie z powodu utraty domu.
-Trzecim i ostatnim produktem plantacji kawy jest czterdziesto procentowy rum.
+Trzecim i ostatnim produktem plantacji kawy jest czterdziestoprocentowy rum.
 Podobnie jak każdy inny rum na Kubie, tak i ten produkowany jest z cukru trzcinowego, lecz tutaj dodatkiem są kwiaty kawowca.
 W ten sposób jest to hybrydowe rozwiązanie cukrowo-owocowe, jedyne takie w całym kraju.
 Zostaliśmy poczęstowani każdym z lokalnych produktów, lecz zamiast pitnej kawy dostaliśmy jedynie jej ziarna - stąd pomysł na pochrupanie ich.
@@ -68,7 +68,7 @@ Odprowadzająca nas Pani zażartowała sobie, że na Kubie Polacy i Rosjanie zna
 Z przyjemnością odbiliśmy ten żart, że u nas również jesteśmy z tego znani.
 Kieliszek (wykonany z bambusa!) rumu wypiliśmy na jeden raz, bez popicia.
 Na ten widok dwójka Belgów została poinstruowana, aby wypić go powoli.
-Nie wiem, czy miało to oznaczać, że ominęła nas część walorów smakowych, czy była to raczej obawa, że Belgowie się zakrztuszą, i chyba wole nie szukać odpowiedzi na to pytanie.
+Nie wiem, czy miało to oznaczać, że ominęła nas część walorów smakowych, czy była to raczej obawa, że Belgowie się zakrztuszą, i chyba wolę nie szukać odpowiedzi na to pytanie.
 Zostaliśmy również poczęstowani sokiem z trzciny cukrowej, który smakował niemalże identycznie jak mleko z cukrem.
 W napój włożona była laska trzciny cukrowej, którą można było pogryźć (i nie zalecane jest połykać, ponieważ jest bardzo włóknista i podejrzewam, że nasz ludzki układ trawienny mógłby sobie z tym nie poradzić).
 Sok z trzciny cukrowej smakował dużo bardziej jak trzcina cukrowa niż sama trzcina cukrowa.
@@ -85,7 +85,7 @@ To bardzo wygodne rozwiązanie, jadąc na zwierzęciu można mu zaufać.
 Dla mnie najbardziej przerażające było zjeżdżanie z góry, po nierównej ziemi.
 Sam ostrożnie i powoli schodziłbym taką trasą, za to koń poruszał się swoim zwykłym marszem, w dodatku mając na plecach pasażera.
 Następny postój zrobiliśmy nad jakimś jeziorem - w tym momencie pisząc to żałuję, że nie sprawdziłem na mapie jak się nazywało.
-Przewodnik pokazał nam powoli sposób w jaki przywiązał uprząż konia do...
+Przewodnik pokazał nam sposób w jaki przywiązał uprząż konia do...
 stojaka na konie?
 Takiego płotku, przy którym stały i do którego były przywiązane.
 Węzeł ten miał charakter teleskopowy, to znaczy można było dołożyć dowolną liczbę powtarzających się elementów węzła, co skracało pozostałą, wiszącą w powietrzu linę.
@@ -108,7 +108,7 @@ Albo kilka.
 Nasza piesza wędrówka przez jaskinie kończyła się schodami w dół - w kierunku rzeki.
 Tam cyklicznie podpływała łódka napędzana motorem, zbierająca posiadających bilet turystów.
 Wsiedliśmy i popłynęliśmy w głąb jaskini.
-Motorniczy pokazywał nam zielonym laserem istotne punkty na ścianach, ale o ile na początku spodziewałem się, że są to faktyczne elementy historyczne jaskini, tak sądząc po „wiszącej świni” i „ogromnej twarzy”, były to chyba jedynie skamieliny o różnych kształtach, a nie faktyczne zachowane w kamieniu obiekty.
+Sternik pokazywał nam zielonym laserem istotne punkty na ścianach, ale o ile na początku spodziewałem się, że będą to faktyczne elementy historyczne jaskini, tak sądząc po „wiszącej świni” i „ogromnej twarzy”, były to chyba jedynie skamieliny o różnych kształtach, a nie faktyczne zachowane w kamieniu obiekty.
 Wśród nich był także konik morski, palma i kilka innych których nie wychwyciłem z angielskiego opisu ubarwionego hiszpańskim akcentem.
 Najbardziej zjawiskowym momentem wycieczki było wypłynięcie z jaskini - przed nami przez szczelinę wyłaniała się jasna furtka na zielony botaniczny świat zewnętrzny.
 Zaraz za nią wycieczka się kończyła.
@@ -118,17 +118,17 @@ Właściwie to spodziewałem się, że wypożyczymy łódź, którą samowolnie 
 Dotarliśmy do samochodu i pojechaliśmy zatankować.
 Jutro rano planujemy wyjechać do Cienfuegos.
 Na stacji benzynowej okazało się jednak, że nie wolno nam tam tankować.
-Obsługa stacji wskazała nam stacje, na której będzie to możliwe: 25km dalej w Pinar del Rio.
-Nasza trasa i tak przebiega przez ten punkt, ponieważ tam zaczyna się autostrada A4, którą planujemy jechać.
-Paliwa mamy oczywiście dość, natomiast stacje benzynowe na Kubie nie są specjalnie częste, do tego nie wiemy które z nich (widocznych dla nas na mapie) w ogóle mogą nam sprzedać paliwo.
+Obsługa stacji wskazała nam stacje, na której będzie to możliwe: 25 km dalej w Pinar del Rio.
+Nasza trasa i tak przebiegała przez ten punkt, ponieważ tam zaczynała się autostrada A4, którą planowaliśmy jechać.
+Paliwa mieliśmy oczywiście dość, natomiast stacje benzynowe na Kubie nie są specjalnie częste, do tego nie niedzieliśmy, które z nich w ogóle mogą nam sprzedać paliwo.
 Jest to jakiś punkt ryzyka całej wycieczki.
 W końcu ciężko będzie nam poruszać się po Kubie, gdy stacje konsekwentnie będą nam odmawiać sprzedaży.
-Wróciliśmy zatem do pokoju, dokonaliśmy szybkiego przepakowania i ruszyliśmy pieszo na kolacje.
-Tym razem nie chcąc trafić na słaba restauracje tak jak wczoraj - poszliśmy prosto w miejsce, gdzie ostatnio piłem Tę Wyborną Pinacoladę.
+Wróciliśmy zatem do pokoju, dokonaliśmy szybkiego przepakowania i ruszyliśmy pieszo na kolację.
+Tym razem nie chcąc trafić na słabą restaurację tak jak wczoraj - poszliśmy prosto w miejsce, gdzie ostatnio piłem Tę Wyborną Pinacoladę.
 W drodze tam rozpadał się deszcz, ale nie była to żadna ulewa, a temperatura powietrza nawet w czasie opadu była bardzo przyjemna.
 Śmialiśmy się na głos widząc uciekających Kubańczyków, że chcielibyśmy mieć w Polsce takie deszcze.
- Mokrzy usiedliśmy w restauracji i zamówiliśmy po drinku, w międzyczasie wertując menu.
-Ja na kolacje zamówiłem smażonego kurczaka, Kozi natomiast stek wołowy.
+Mokrzy usiedliśmy w restauracji i zamówiliśmy po drinku, w międzyczasie wertując menu.
+Ja na kolację zamówiłem smażonego kurczaka, Kozi natomiast stek wołowy.
 Wizualnie jego dzisiejszy posiłek można byli porównać z wczorajszym, natomiast smakowo był bardzo dobry.
 Tak samo zresztą jak mój.
 Koziemu do jedzenia podany został także nóż ząbkowany - jak przystało do czerwonego mięsa.
