--- a/book/dzien04.tex
+++ b/book/dzien04.tex
@@ -9,14 +9,14 @@ Poranna pogawędka, najpierw cicha stopniowo nabierała głosu, aż urosła do n
 Ściszyliśmy ton, ale nastąpiło drugie pukanie, więc uciszyliśmy się zupełnie.
 Widocznie komuś przeszkadzaliśmy i będzie nam dane dokończyć rozmowę dopiero później, przy śniadaniu.
 Minęło parę chwil i przeszła mi przez głowę myśl o spojrzeniu na to z trochę innej strony: a co jeśli to obsługa słysząc, że nie śpimy, wołała nas na śniadanie?
-Wychyliliśmy się zaczerpnąć wywiadu.
+Wychyliliśmy się, by to sprawdzić.
 Stół faktycznie był nakryty, ale pusty.
 Ubraliśmy się zatem i ruszyliśmy na śniadanie.
 Było bardzo podobne do wczorajszego: talerze z krojonym ananasem, bananem, papają i guawą.
 Identyczny ser żółty i tajemniczy produkt kategorii okołomięsnej, którego dziś również żaden z nas nie spróbował.
 Zamiast grzaneczek był świeży chleb.
 Do tego masło, jajecznica, kawa, sok z mango, mleko.
-Dodatkiem wyróżniającym dzisiejsze śniadanie nad wczorajszym był pieróg z ciasta francuskiego z odrobiną dżemu w środku.
+Dodatkiem odróżniającym dzisiejsze śniadanie od wczorajszego był pieróg z ciasta francuskiego z odrobiną dżemu w środku.
 Zarówno dziś, jak i wczoraj komar usiadł na kawałku papai i popijał jej sok.
 Może kubańskie komary piją sok z owoców zamiast krwi?
 Albo może my pachniemy dla nich zbyt egzotycznie i boją się spróbować.
@@ -28,33 +28,33 @@ Natomiast pierwszym etapem trasy było dotarcie do stacji benzynowej w Pinar del
 Pełni nadziei, że przynajmniej tam uda nam się kupić benzynę, przemierzaliśmy wąskie szosy.
 Przed nami wlekła się stara szara Toyota Yaris - jej kierowca jechał bardzo zachowawczo. 
 To prawda, że zakręty były dosyć ostre i bardzo częste, ale stan nawierzchni był całkiem dobry.
-Podejrzewam, że w przeciwieństwie do naszego, jego samochód może nie mieć wystarczająco sprawnych hamulców, a to brzmi jak rozsądny powód, aby jechać powoli.
+Podejrzewam, że w przeciwieństwie do naszego, jego samochód mógł nie mieć wystarczająco sprawnych hamulców, a to brzmi jak rozsądny powód, aby jechać powoli.
 Na Kubie niewielu mieszkańców może pozwolić sobie na samochód.
-Pewnie jest z tym podobnie jak u nas: samo kupno samochodu jest dla nich sporym wydatkiem, ale również uciążliwe są ciągłe opłaty za naprawy i paliwo.
+Pewnie jest z tym podobnie jak u nas: samo kupno samochodu jest dla nich sporym wydatkiem, ale równie uciążliwe są ciągłe opłaty za naprawy i paliwo.
 Kubańskie samochody psują się dużo częściej niż nasze, zwyczajnie dlatego, że ich średni wiek jest zdecydowanie dłuższy.
 W podróży z Viñales do Cienfuegos widzieliśmy mnóstwo aut zatrzymanych przy drodze i przechodzących jakieś naprawy, często z podniesioną maską.
 Drugą grupę zaparkowanych w szczerym polu samochodów stanowią te zupełnie porzucone.
 Najprawdopodobniej oczekujące na powrót właściciela z narzędziami lub częściami zamiennymi.
 Gdy dotarliśmy na stacje benzynową, ustawiliśmy się w kolejce do dystrybutora.
-Widząc to właściciel zaczął machać na nas ręka.
+Widząc to właściciel zaczął machać do nas ręką.
 Jak się po chwili okazało, na szczęście nie miał na myśli tego, że nie uda nam się znów zatankować, a jedynie to byśmy skorzystali z innego dystrybutora.
-My bowiem ustawiliśmy się po benzynę 90cio oktanową.
-Nasz samochód za to wymagał minimum benzyny 94ro oktanowej.
+My bowiem ustawiliśmy się po benzynę 90-cio oktanową.
+Nasz samochód za to wymagał minimum benzyny 94-ro oktanowej.
 Liczba oktanowa świadczy o czystości paliwa (ale rzadko ma przełożenie na kaloryczność spalania!) z punku widzenia obecności łańcuchów węglowodorów o długości z odpowiedniego zakresu.
 Im paliwo ma więcej oktanów, tym jest bardziej odporne na przedwczesne spalanie w silniku (tak zwane spalanie stukowe, które jest słyszalne w formie stukania).
 Zacząłem się zastanawiać, czy stacja benzynowa w Viñales odmówiła nam zatankowania z powodów prawnych, czy nie mieli odpowiedniego paliwa?
 Bez odpowiedzi na to pytanie ruszyliśmy w dalszą trasę.
 Z powodu wysokiej ceny benzyny (w porównaniu ze średnimi kubańskimi zarobkami.
-Benzyna na Kubie kosztuje prawie tyle samo, co w Polsce), wiele ludzi porusza się na Kubie autobusami (które często są przepełnione), tak zwanymi taxi colectivo (czyli taksówką, ale przewożąca wiele ludzi na raz - często między miastami) lub autostopem.
+Benzyna na Kubie kosztuje prawie tyle samo, co w Polsce), wiele ludzi porusza się autobusami (które często są przepełnione), tak zwanymi taxi colectivo (czyli taksówką, ale przewożąca wiele ludzi na raz - często między miastami) lub autostopem.
 Często ciężarówki z naczepą zbierają wielu autostopowiczów, którzy później stoją tłumem na tej naczepie.
-Jeżdżąc kubańskimi drogami można zauważyć, że właściwie każde miejsce przy drodze okryte cieniem gromadzi przynajmniej 3ech autostopowiczów.
-Niektórzy po prostu stoją, inny machają rękami, ostatnia zaś - najmniej liczna grupa - macha ręka trzymając 1 cuc.
+Jeżdżąc kubańskimi drogami można zauważyć, że właściwie każde miejsce przy drodze okryte cieniem gromadzi przynajmniej trzech autostopowiczów.
+Niektórzy po prostu stoją, inny machają rękami, ostatnia zaś - najmniej liczna grupa - macha rękami trzymając 1 cuc.
 Dzieci dostają się do szkół za pomocą szkolnych autobusów.
 Na Kubie są trzy autostrady: A1, A3 i A4.
 Dokładnie przeszukałem mapę w poszukiwaniu tej brakującej, lecz bezskutecznie.
 Historia jej zaginięcia jest mi więc nieznana.
 Autostrady są w całkiem dobrym stanie.
-Jadąc nimi konsekwentnie poruszaliśmy się około 100km/h - co świadczy o jakości nawierzchni.
+Jadąc nimi konsekwentnie poruszaliśmy się około 100 km/h - co świadczy o jakości nawierzchni.
 Autostrady mają tu 3 pasy w każdym kierunku, w porywach do 4, czyli są zdecydowanie większe niż te w Polsce.
 Jest na nich za to mały ruch, ponieważ na Kubie ogólnie jest mało samochodów.
 Przez większość trasy mieliśmy do dyspozycji wszystkie trzy pasy dla siebie, co często wykorzystywaliśmy by omijać nierówności w drodze, najczęściej kilkucentymetrowe dziury.
@@ -73,18 +73,18 @@ W końcu w każdej chwili mógł tak jak my próbować ominąć dziurę, jednocz
 Kozi podsumował to stwierdzeniem: „fajne pasy, takie nienamalowane”. 
 Na Kubie nie ma zbyt wielu samochodów, więc powietrze mogłoby być czyste.
 Kubańczycy radzą sobie z tym w ten sposób, że te które akurat już jeżdżą po drogach, wydalają ogromne ilości, często mocno czarnych lub niebieskich spalin.
-Nawet 4 auta na drodze potrafią zagwarantować chmurę dymu obejmującą całą dostępna przestrzeń.
+Nawet 4 auta na drodze potrafią zagwarantować chmurę dymu obejmującą całą dostępną przestrzeń.
 Przy drogach, jak w każdym innym miejscu Kuby znajdują się uliczni handlarze (przy autostradach również!) oferujący swój drobny asortyment.
 Najczęściej widać ludzi trzymających metrowe wiązki cebuli i czosnku, ale są też kolorowe napoje i ludzie z tajemniczymi pudełeczkami wielkości dwóch cegieł, których zawartość do dziś pozostaje dla mnie zagadką.
 Kiedy żegnaliśmy się z Pacho, dostaliśmy od niego kartkę z adresem jego znajomych, którzy w Cienfuegos posiadają pokój do wynajęcia.
 Okazało się, że właścicielką pokoju jest kobieta w okolicy czterdziestki, której później nadaliśmy imię Rejczel.
-Rejczel chciała od nas 30 dolarów za noc, co było najwyższa do tej pory ceną.
+Rejczel chciała od nas 30 dolarów za noc, co było najwyższą do tej pory ceną.
 Korzystając z translatora napisaliśmy jej, że to dla nas za dużo i możemy zaoferować 20 albo pójdziemy szukać gdzie indziej.
 Na Kubie jest mnóstwo pokoi do wynajęcia, które we wrześniu w większości stoją puste.
 Rejczel próbowała krakowskiego targu, ale dla nas każda kwota pośrednia również była nie do zaakceptowania, w końcu Gonzales w centrum Hawany wziął od nas 14 dolarów za noc.
-Koniec końców udało nam się dojść do porozumienia, bowiem rano zjemy tu też śniadanie, które wszędzie, gdzie byliśmy bywało dodatkowo płatne - stąd sumaryczna kwota zadowoliła Rejczel.
+Koniec końców udało nam się dojść do porozumienia, bowiem planowaliśmy rano zjeść tu też śniadanie, które wszędzie, gdzie byliśmy bywało dodatkowo płatne - stąd sumaryczna kwota zadowoliła Rejczel.
 Ta sytuacja natchnęła mnie pewnym przemyśleniem: wolnych pokoi jest mnóstwo, a Kubańczycy bardzo potrzebują dodatkowych źródeł pieniędzy.
-Może wystarczyłoby targować się z Kubańczykami, aż zniża cenę do 10 dolarów?
+Może wystarczyłoby targować się z Kubańczykami, aż zniżą cenę do 10 dolarów?
 Dla nich to i tak o 10 więcej, niż odmawiając całkowicie.
 Żaden z nas nie ma za to serca, aby tak żerować na Kubańczykach, chcemy tylko nie przepłacić za nocleg. 
 Cienfuegos nazywane jest kubańskim Paryżem.
@@ -103,28 +103,28 @@ W znaczeniu metaforycznym oczywiście, bo bankomat był na poziomie ulicy.
 Moja z kolei działała, ale na swoim koncie mam jedynie opary środków oczekujące na dziesiątego września.
 Byłem z Kozim umówiony tak, że do tego czasu będzie mógł mi pożyczyć, a potem ja będę dalej finansował wycieczkę.
 Zdezorientowani ruszyliśmy w kierunku starego rynku, próbując odnaleźć się w tej sytuacji.
-Stopniowo rozdrapując odmęty pamięci, Kozi przypomniał sobie, że na swoje konto ma blokadę wypłacania poza Europą, o której najzwyczajniej w świecie zapomniał.
+Stopniowo rozdrapując odmęty pamięci, Kozi przypomniał sobie, że ma na swoim koncie blokadę wypłacania poza Europą, o której najzwyczajniej w świecie zapomniał.
 Usiedliśmy na środku rynku, który na mapie figuruje pod nazwą Parque Central de José Martí.
 Koziemu przyszedł z banku sms o podejrzanej aktywności konta i prośby kontaktu z infolinią.
 Płacąc za połączenie jak za złoto, dowiedzieliśmy się, że faktycznie blokada jest aktywna, a co więcej z powodów bezpieczeństwa nie możemy jej dzisiaj zdjąć, dopiero jutro obsługa karty się odblokuje i znów przyjdzie nam zadzwonić na infolinię, aby wyłączyć zabezpieczenie.
 Kozi potrzebował chwili, aby się uspokoić, więc ja przeszedłem się spacerem pod pomnik na środku rynku.
-Przepisałem wyryte na nim słowa do translatora, ale nie była to żadna informacja historyczna, a jedynie wiersz o poświeceniu dla ojczyzny.
-Gdy się odwróciłem, do Koziego zagadywał już jakiś Kubańczyk o łysych włosach.
-Podszedłem do nich, a Kubańczyk przedstawił się, że ma na imię Pablo i czeka na córkę wracająca ze szkoły.
+Przepisałem wyryte na nim słowa do translatora, ale nie była to żadna informacja historyczna, a jedynie wiersz o poświęceniu dla ojczyzny.
+Gdy się odwróciłem, do Koziego zagadywał już Kubańczyk, którego sam Kozi nazwał "Człowiekiem o łysych włosach".
+Podszedłem do nich, a Kubańczyk przedstawił się, że ma na imię Pablo i czeka na córkę wracającą ze szkoły.
 Spytałem go kim jest osoba przedstawiana przez pomnik i dowiedzieliśmy się, że to tytułowy José Marti - kubański bohater narodowy z końcówki drugiej epoki w dziejach Kuby - hiszpańskiego kolonializmu. Walczący o niepodległość kraju.
-\par Gdy odchodziliśmy, Pablo zaczął na pożegnanie zebrać od nas pieniądze na lody dla swojej córki.
+\par Gdy odchodziliśmy, Pablo zaczął na pożegnanie żebrać od nas pieniądze na lody dla swojej córki.
 Zniesmaczeni rozpoczęliśmy przemierzanie Cienfuegos w poszukiwaniu obiadu.
 Przygotowany plan zakładał odwiedzenie słynnej miejscowej restauracji i tak też zrobiliśmy.
-Oboje zamówiliśmy sobie po lokalnym specjale: Zupie Domu, na drugie danie ja poprosiłem o kurczaka w miodzie, Kozi natomiast szarpaną wołowinę.
+Oboje zamówiliśmy sobie po lokalnym specjale: Zupie Domu, a na drugie danie ja poprosiłem o kurczaka w miodzie, Kozi natomiast szarpaną wołowinę.
 Zupa była pyszna, o bardzo intensywnym smaku, który ciężko mi opisać.
 Była to najprawdopodobniej mieszanka przypraw, którą mój język zakwalifikował jako kategorię „do kurczaka”.
 Mój kurczak z kolei nie robił już takiego wrażenia.
 Była to porcja najzwyczajniej usmażonego kurczaka polanego miodem, podana z ziemniakami.
 A dokładnie z jednym ziemniaczkiem.
-Danie Koziego było trochę lepsze, ale również nie miałem wrażenia, że warte było nazywania tego miejscem perłą miejscowych kulinariów.
+Danie Koziego było trochę lepsze, ale nawet nie na tyle, abym zgodził się z panującą opinią, że to miejsce jest perłą miejscowych kulinariów.
 Cienfuegos mieści się w sercu zatoki wpadającej do Morza Karaibskiego.
 Nazwa zatoki nie jest mi znana, ponieważ brakuje jej na mapie.
-Tam właśnie się zatem skierowaliśmy.
+Zatem tam właśnie się skierowaliśmy.
 Przeszliśmy znaczny kawałek miasta pieszo i udało nam się znaleźć dojście do plaży.
 Nie było to takie proste, bo co chwilę dostęp blokowany jest przez prywatne rezydencje i hotele, które zaskarbiają sobie ją na własność.
 W budce, która wyglądała raczej jak budka dj’a, udało nam się kupić zimne piwo i usiedliśmy na kawałku betonowego nadbrzeża mocząc rozkosznie nogi.
@@ -134,8 +134,8 @@ W pełnym słońcu ruszyliśmy przed siebie i po długich minutach marszu dotarl
 Zamówiliśmy dwa napoje i niecierpliwie oczekiwaliśmy na ich podanie.
 I okazały się...
 średnie.
-Drink może byłby dobry albo przynajmniej dało się poczuć smak, gdyby ilość alkoholu nie była taka przesadzona.
-Przesadzona do tego stopnia, że po większym łyku paliła całą jamę ustna.
-Wcześniej padł nawet pomysł przetestowania nauki hiszpańskiego metodą Hose, ale widząc faktyczny stan rzeczy skończyliśmy na jednym.
+Drink może byłby dobry albo przynajmniej dałoby się poczuć smak, gdyby ilość alkoholu nie była taka przesadzona.
+Przesadzona do tego stopnia, że po większym łyku paliła całą jamę ustną.
+Wcześniej padł nawet pomysł przetestowania nauki hiszpańskiego metodą Hose, ale widząc faktyczny stan rzeczy, skończyliśmy na jednym drinku zamiast pięciu.
 Wróciliśmy za to do pokoju i skorzystaliśmy z dobrodziejstw posiadłości Rejczel.
 Z „hotelowej” lodówki wyciągnęliśmy po puszce piwa i weszliśmy do basenu znajdującego się przy samiutkich drzwiach naszego pokoju.
