--- a/book/dzien05.tex
+++ b/book/dzien05.tex
@@ -4,7 +4,7 @@
 Dzisiejszy dzień przywitał mnie zaskoczeniem: komary w Cienfuegos gryzą.
 I to do tego całkiem obficie!
 Spod kołdry wystawały mi jedynie stopy, ale to wystarczyło komarom pokąsić mnie w blisko 7 miejscach.
-Z samego rana Kozi zadzwonił na infolinie banku i odblokował swoją kartę, więc zaplanowaliśmy wypłacić pieniądze w Trinidadzie.
+Z samego rana Kozi zadzwonił na infolinię banku i odblokował swoją kartę, więc zaplanowaliśmy wypłacić pieniądze w Trinidadzie.
 Śniadanie u Rejczel było najmniej obfite w owoce ze wszystkich do tej pory, za to wyróżniało się pysznym tostem z szynką i serem z opiekacza.
 Podano nam również cały dzban smoothie z guawy, więc napoju tego mieliśmy pod dostatkiem.
 \par Przed wyjazdem chciałem jeszcze powyrzucać plastikowe butelki, które zostały nam po wodzie.
@@ -66,9 +66,9 @@ Gdy już się doczekaliśmy, wypłata oczywiście się nie powiodła, nie niosą
 Ja czułem się spokojny - zawsze możemy skontaktować się z kimś z Polski, aby przelać pieniądze z konta Koziego na moje i wypłacić.
 Przelew taki musiałby tylko być ekspresowym, bo oczekiwanie na środki spauzowałoby nam podróż.
 Kiedy wychodziliśmy ochroniarz banku zalecił nam, abyśmy poszli do punktu telekomunikacyjnego i kupili kartę Internetową.
-Karta taka pozwala podłączyć się do jednej z wielu lokalnych sieci wifi (a następnie zalogować danymi z karty).
+Karta taka pozwala podłączyć się do jednej z wielu lokalnych sieci Wi-Fi (a następnie zalogować danymi z karty).
 Tak też zrobiliśmy i ku naszemu zdziwieniu karta kosztowała tylko 2 kubańskie dolary.
-Łącznie dzwoniąc na infolinię koszt połączeń wyniósł już jakieś 150zł, za to kartę można było też odblokować przez Internet w cenie 8zł.
+Łącznie dzwoniąc na infolinię koszt połączeń wyniósł już jakieś 150 zł, za to kartę można było też odblokować przez Internet w cenie 8 zł.
 Rachunek ten odbił się złością na Kozim.
 Posiadając jednak kartę Internetową Kozi wykonał z telefonu przelew środków na swoje drugie konto w obrębie tego samego banku, więc natychmiastowo.
 Następnie poszliśmy znów spróbować szczęścia w Banco Internacional.
@@ -81,7 +81,7 @@ Kozi skomentował to tylko kwestią:
 Minęło może 10 minut i zasilanie wróciło.
 Światła znów się zapaliły, a bank powoli wracał do życia.
 Nadal trochę to trwało, w końcu cała infrastruktura komunikacji finansowej musi powstawać.
-Jedyną rzeczą, która nadal nam się nie udała była wypłacona kwota, bowiem tylko część zamierzonych pieniędzy bank pozwolił nam wybrać. Wynikało to pewnie z limitu na karcie, ale możemy codziennie wypłacać kolejna część, więc naszej podróży nic już nie zagraża.
+Jedyną rzeczą, która nadal nam się nie udała była wypłacona kwota, bowiem tylko część zamierzonych pieniędzy bank pozwolił nam wybrać. Wynikało to pewnie z limitu na karcie, ale możemy codziennie wypłacać kolejną część, więc naszej podróży nic już nie zagraża.
 Świętując zażegnanie kryzysu wybraliśmy się na obiad do wysoko ocenionej (w rankingu map offline) restauracji.
 Wnętrze było ślicznie urządzone, z dużą dozą roślinności.
 Obok naszego stolika stał drewniany moździerz do kawy - pilon.
@@ -102,17 +102,17 @@ Najstarsze zdjęcia datowane były rokiem 1905, więc początkiem ery okupacji S
 Najwięcej zdjęć było z czasów przed samą rewolucją, w latach około 1950-1958, więc podejrzewam, że Trinidad mógł odgrywać istotną rolę w całym procederze.
 Weszliśmy w końcu schodami na szczyt wieży.
 Wieża ta wyposażona była w dzwon o około metrze wysokości oraz metrze średnicy.
-Wydaje mi się, że cały budynek był Kubańską szkoła, a dzwon ten służył do wzywania dzieci do nauki.
+Wydaje mi się, że cały budynek był Kubańską szkołą, a dzwon ten służył do wzywania dzieci do nauki.
 Gdy już nacieszyliśmy się tym widokiem zaczęliśmy schodzić na dół schodami, aby dotrzeć do ostatniego punktu naszego dzisiejszego planu: lokalnego drinka.
 W Trinidadzie lokalnym specjałem jest drink na bazie soku z limonki i miodu, z dodatkiem przedestylowanego tylko raz rumu.
 Nazywa się canchanchara, a my poszliśmy napić się go do miejsca o tej samej nazwie - baru Canchanchara.
-Napoje podali nam w glinianych miseczkach, z patyczkiem do rozśmieszania miodu.
+Napoje podali nam w glinianych miseczkach, z patyczkiem do rozmieszania miodu.
 Soku było tak dużo, że nawet dokładne rozpuszczenie miodu nie powodowało, że drink robił się słodki.
 Był za to bardzo orzeźwiający i podejrzewam, że to o to właśnie chodziło.
 W samym barze Canchanchara po podłożu z kamieni biegały luzem jaszczurki.
 Kozi naliczył ich 5, ale kto wie, ile z nich jeszcze tam było i odpoczywało w ukryciu.
-Zdecydowaliśmy się dodać jeden punkt do dzisiejszego programu: wejście na kolejny, tym razem najwyższy, punkt widokowy: Loma de la Vigia - górę piętrzącą się 180m ponad miastem.
-Ruszyliśmy zatem w ponad 30sto stopniowym upale pnąc się po ścieżce prowadzącej na szczyt.
+Zdecydowaliśmy się dodać jeden punkt do dzisiejszego programu: wejście na kolejny, tym razem najwyższy, punkt widokowy: Loma de la Vigia - górę piętrzącą się 180 m ponad miastem.
+Ruszyliśmy zatem w ponad 30-sto stopniowym upale pnąc się po ścieżce prowadzącej na szczyt.
 Obrany szlak był dosyć prosty, ale temperatura i spory rozmiar obiadu niesionego w żołądku doprowadził mnie do stanu, w którym aby ukończyć wspinaczkę, musiałem ratować się nakryciem głowy z ręcznika zmoczonego wodą.
 \par Na szczycie znajdowało się obserwatorium.
 Gdy tylko zbliżyliśmy się do jego bramy ukazał się nam przewodnik, który zaoferował chłodne napoje i zaprowadził nas na punkt widokowy na dachu.
