--- a/book/dzien09.tex
+++ b/book/dzien09.tex
@@ -4,7 +4,7 @@
 Wieczorem, gdy już spałem, lokalny bar obudził mnie muzyką.
 Udało mi się przespać parę godzin, ale później nastała senna bessa.
 Wspomniane przeze mnie wcześniej okna nic a nic nie chroniły nas przed dźwiękiem, przez co rano wstałem niezbyt wyspany.
-Miałem tylko nadzieję, że Kozi spał lepiej, bo czekała nas 8smio godzinna jazda, a to on jest kierowcą.
+Miałem tylko nadzieję, że Kozi spał lepiej, bo czekała nas ośmiogodzinna jazda, a to on jest kierowcą.
 Oczywiście wynajmując auto zdecydowaliśmy się na dopłatę, abym i ja mógł je prowadzić, za to póki co nie skorzystaliśmy z tej możliwości.
 Koziemu dobrze wychodziły nagłe hamowania przed dziurami, a zwycięskiego składu się nie zmienia.
 \par Śniadanie u Mariji nie było specjalnie bogate, za to całkiem smakowite.
@@ -18,7 +18,7 @@ Poruszyłem ten temat z Kozim i wspólnie doszliśmy do wniosku, że istnieje ta
 Zapłaciliśmy i pożegnaliśmy się.
 Wsiedliśmy w samochód i pojechaliśmy w kierunku stacji benzynowej, gdzie z powodzeniem napełniliśmy bak.
 Odcinek górski faktycznie był w gorszym stanie niż dzień wcześniej.
-Kilkukrotnie napotkaliśmy zablokowany jeden z pasów, za to udało nam się pokonać go całego.
+Kilkukrotnie napotkaliśmy zablokowany jeden z pasów, ale udało nam się pokonać go całego.
 W trakcie jazdy mijaliśmy przydrożnych handlarzy wymachujących do nas np.
 kiścią bananów.
 Widok ten towarzyszył nam przez całą Kubę, ale tym razem przeszło mi przez głowę pytanie: A co jeśli oni nie chcą nam tego sprzedać, tylko oferują nam to jako opłatę za podwózkę?
@@ -34,7 +34,7 @@ Kuba była jednym z pierwszych krajów obu Ameryk, gdzie uruchomiona została si
 Na całej Kubie znajdują się pomniki przedstawiające zabytkowe lokomotywy, które jako pierwsze przemierzały szyny tego kraju.
 Ciekawe, kiedy znów będziemy widzieli jakiś pociąg jadący przez Kubę.
 W związku z tym, że dzisiejsza trasa była zdecydowanie dłuższa niż poprzednie, zdecydowaliśmy się zaburzyć rytm dnia i obiad zjeść na postoju.
-W przeciwnym wypadku udałoby się nam to dopiero w okolicy 18stej - po dotarciu na sam koniec trasy.
+W przeciwnym wypadku udałoby się nam to dopiero w okolicy 18-stej - po dotarciu na sam koniec trasy.
 Zatrzymaliśmy się na samym początku obwodnicy Las Tunas, w knajpie o nazwie El Ranchon.
 Była to dosyć spora buda ze słomianym dachem wznoszącym się na drewnianych palach ponacinanych jak kiełbaski z grilla (co jak mniemam było elementem ozdobnym).
 Menu wywieszone było na słupie i zawierało dwa dania i trzy przystawki (w tej kolejności, od góry do dołu).
@@ -49,14 +49,14 @@ Z drugiej strony niezbadane są ścieżki kubańskich wymysłów kulinarnych, wi
 Nie wiem która z tych opcji przerażała mnie bardziej.
 Na szczęście okazało się, że moje danie było zwykłymi plastrami schabu w cebuli, podanymi z fasolką, awokado, chipsami bananowymi i brązowym ryżem.
 Posiłek był pyszny!
-W trakcie jedzenia borykaliśmy się z niezwykle silnym wiatrem, który na terenie całej knajpy targał ze sobą serwetki, puste puszki, a chwilowo i puste butelki.
+W trakcie jedzenia borykaliśmy się z niezwykle silnym wiatrem, który z każdego stolika targał ze sobą serwetki, puste puszki i butelki.
 Silny wiatr i głośna muzyka właściwie wykluczyła jakąkolwiek rozmowę, więc mogliśmy odezwać się do siebie dopiero po skończonym posiłku.
 Gdy to nastąpiło, zapłaciliśmy i zebraliśmy się do auta.
 \par Ruszyliśmy w dalszą trasę, kierując się na obwodnicę Las Tunas.
 Ku naszemu zdziwieniu już kawałek dalej zabrakło asfaltu.
-Przez najbliższe 5km przyszło nam jechać po żwirze.
+Przez najbliższe 5 km przyszło nam jechać po żwirze.
 Droga chyba była po prostu w remoncie, co nie było zaznaczone na naszych mapach.
-Wcześniej jadąc przez Las Tunas wypadło nam przemierzyć je przez samo centrum, które wyglądało ślicznie i szczerze mówiąc byłem trochę rozczarowany tym, jak tym razem poprowadziła nas nawigacja.
+Wcześniej jadąc przez Las Tunas przypadło nam przemierzyć je przez samo centrum, które wyglądało ślicznie i szczerze mówiąc tym razem byłem trochę rozczarowany tym, jak poprowadziła nas nawigacja.
 Na szczęście zaraz za miastem asfalt powrócił i mogliśmy normalnie (jak na warunku Kubańskie, czyli omijając wszędobylskie dziury drogowe) jechać.
 Celem naszej podróży było La Boca, mała miejscowość wybrana trochę przez położenie palca na mapie - potrzebowaliśmy umieścić w okolicy tego miejsca nocleg, aby dziennie pokonywana trasa nie była zbyt długa. La Boca wygrało w plebiscycie na najlepszą lokalizację zarówno pod kątem odległości do poprzedniego i następnego przystanku, jak i bliskości do Oceanu Atlantyckiego.
 \par Z każdym pokonanym przez nas kilometrem jakość dróg się pogarszała.
@@ -69,15 +69,15 @@ Odcinek, którym przyszło nam tu jechać był drogą czwartej kategorii.
 O ile na początku był jeszcze asfalt z dziurami tak głębokimi, że jeden nieostrożny ruch mógłby uszkodzić nam zawieszenie, tak po chwili jechaliśmy już po czymś, co chyba kiedyś było asfaltem, a dziś było pozostałością po jego sfrezowaniu.
 Liczba dziur się spotęgowała.
 Cały ten teren przypominał poligon doświadczalny na którym testowane były manewry bombardowania.
-Dziury o średnicach z zakresu 0,5m do 2m, głębokie na 15-30cm.
+Dziury o średnicach z zakresu 0,5 m do 2 m, głębokie na 15-30 cm.
 Niemalże jedna przy drugiej.
-Czasami obok tej „drogi” pojawiał się dodatkowy pas ziemi, którym mogliśmy przejechać około 50m bez obawy o utratę koła.
-Blisko 20km pokonaliśmy iście żółwim tempem, nieustannie snując żarty o Kubańskich drogach.
+Czasami obok tej „drogi” pojawiał się dodatkowy pas ziemi, którym mogliśmy przejechać około 50 m bez obawy o utratę koła.
+Blisko 20 km pokonaliśmy iście żółwim tempem, nieustannie snując żarty o Kubańskich drogach.
 
 \szQuote{Brakuje tylko autostopowiczów z bananami.}
 \noindent Na szczęście, gdy tylko dojechaliśmy do północnej nitki komunikacyjnej, wjechaliśmy na jednolity asfalt.
 Jednolity - bo dziury w nim załatane były asfaltem i taka droga towarzyszyła nam już do samego La Boca.
-Na miejsce dotarliśmy w okolicy godziny 19stej.
+Na miejsce dotarliśmy w okolicy godziny 19-stej.
 \par Gdy wysiedliśmy odniosłem przez chwile wrażenie, że zrobiło się jakoś zimno, ale po chwili dotarło do mnie, że chyba po prostu ochłodziło się do 25 stopni.
 Ruszyliśmy pieszo w poszukiwaniu noclegu, początkowo bez żadnych sukcesów.
 Pierwsze dwa znalezione przez nas hostele okazały się ślicznymi domkami, niestety opustoszałymi.
@@ -92,7 +92,7 @@ Nigdzie nie było idealnie, ale udało nam się znaleźć możliwie czysty odcin
 Właśnie tam rozkoszowaliśmy się widokiem zachodzącego słońca.
 Woda była cieplejsza niż w Morzu Karaibskim, ale też nie taka czysta (i nie chodzi tu o liście, a o piasek i muł unoszący się z każdym pływem).
 Możliwe, że była to kwestia piaszczystej plaży zamiast kamienistego brzegu.
-Pływaliśmy w Oceanie Atlantyckim dosyć długo, jak tylko było to możliwe, aż zrobiło się całkiem ciemno.
+Pływaliśmy w Oceanie Atlantyckim tak długo, jak tylko było to możliwe, aż zrobiło się całkiem ciemno.
 Za to, gdy wracaliśmy, uczepiły się nas komary - całą chmarą, która podążała za nami aż do pokoju.
 O dziwo tym razem dotkliwie pogryzły Koziego, za to mnie zostawiły w spokoju.
 Dowiedziałem się także, że komary z Cienfuegos pogryzły wtedy tylko mnie, za to Kozi nie miał ani ugryzienia.
