--- a/book/dzien11.tex
+++ b/book/dzien11.tex
@@ -5,31 +5,34 @@ Obudziliśmy się dziś później niż zwykle.
 Do tej pory codziennie jedliśmy śniadanie o 8:00, więc budzik ustawialiśmy na 7:20.
 Dziś wstaliśmy o 9, umyliśmy się i spokojnym krokiem ruszyliśmy na śniadanie.
 Po śniadaniu powoli spakowaliśmy się i poszliśmy na recepcję oddać karty do pokoju oraz zapłacić za dodatkowe wygody dnia wczorajszego.
-Wymeldowanie było o godzinie 12stej, za to o 13stej zaczynał się obiad, na który jeszcze mogliśmy pójść.
+Wymeldowanie było o godzinie 12-stej, za to o 13-stej zaczynał się obiad, na który jeszcze mogliśmy pójść.
 Chcieliśmy zanieść bagaże do samochodu, a potem wrócić do holu i poczekać do obiadu, ale zerwał się okropny deszcz.
-Dopiero gdy przestał poszliśmy z walizkami na parking, a po powrocie usiedliśmy w holu i poczekaliśmy godzinę popijając drink, który otrzymaliśmy zamawiając smoothie, ale który wcale nim nie był.
-Niemalże z równą 13stą weszliśmy na salę obiadową i gdy tylko się najedliśmy, wyjechaliśmy z hotelu.
+Dopiero gdy przestał poszliśmy z walizkami na parking. 
+Po powrocie usiedliśmy w holu i zamówiliśmy sobie po smoothie. 
+Poczekaliśmy godzinę popijając napoje, którego co ciekawe, wcale smoothie nie były.
+Niemalże z równą 13-stą weszliśmy na salę obiadową i gdy tylko się najedliśmy, wyjechaliśmy z hotelu.
 Bardzo miło wspominam ten pobyt.
 \par Wyjeżdżając z Cayo Santa Maria musieliśmy ponownie zapłacić 2 dolary, ale tym razem nie kontrolowali naszych paszportów.
 Skierowaliśmy się na zachód - do Matanzas, gdzie znajdował się ostatni zaplanowany przez nas nocleg.
 Z naszych obliczeń wynikało, że paliwa wystarczy nam już do samej Hawany.
 Obyśmy się nie mylili!
-Nie wiemy, czy po oddaniu samochodu zwrócą nam za paliwo pozostałe w baku, więc wolelibyśmy oddać możliwie pusty.
+Nie wiedzieliśmy, czy po oddaniu samochodu zwrócą nam za paliwo pozostałe w baku, więc woleliśmy oddać możliwie pusty.
 Jadąc do Matanzas mijaliśmy elektrownię słoneczną.
 Niezbyt wyszukaną, bo było to jedynie pole paneli słonecznych.
-W całej podróży trzykrotnie widziałem taką elektrownię ani razu natomiast innego rodzaju.
-Nie jest to żadnym dowodem na ekologię kubańskiej energetyki i szczerze mówiąc ciekawi mnie jaki jest rozkład pomiędzy źródła energii.
+W całej podróży trzykrotnie widziałem taką elektrownię, natomiast innego rodzaju - ani razu.
+Nie jest to żadnym dowodem na ekologię kubańskiej energetyki i szczerze mówiąc ciekawi mnie jaki jest rozkład pomiędzy źródłami energii.
 Koniecznie sprawdzę to jak wrócę!
 Energia identycznie jak u nas rozsyłana jest do lokalnych rozdzielni prądu siecią trakcyjną i identycznym kanałem dalej do odbiorców.
-Nie wiem jakie napięcie wchodzi do rozdzielni ani jakie z niej wychodzi, natomiast w pokojach, w których przyszło nam nocować były gniazdka o dwóch napięciach: amerykańskie gniazdka na płaskie wtyczki o napięciu 110V i europejskie gniazdka na okrągłe bolce o napięciu 220V.
-Im bardziej na zachód Kuby, tym większa była równowaga spotykanych gniazdek, im dalej na wschód z kolei tym większa była przewaga amerykańskich.
-Bywały noclegi, gdzie naładować telefon mogliśmy jedynie z power bank’a.
+Nie wiem jakie napięcie wchodzi do rozdzielni ani jakie z niej wychodzi, natomiast w pokojach, w których przyszło nam nocować były gniazdka o dwóch napięciach: amerykańskie gniazdka na płaskie wtyczki o napięciu 110 V i europejskie gniazdka na okrągłe bolce o napięciu 220 V.
+Im bardziej na zachód Kuby, tym bardziej po równo można było spotkać rodzaje gniazdek. 
+Z kolei im dalej na wschód z kolei tym większa była przewaga amerykańskich.
+Bywały noclegi, gdzie naładować telefon mogliśmy jedynie z power banka.
 Podejrzewam, że z lokalnych rozdzielni prądu wychodzi napięcie o jednej wartości, bo na słupach sieciowych często można spotkać wiszące transformatory olejowe (takie duże walcowate puszki, których zadaniem jest zmiana napięcia na inne), w dodatku po kilka na jednym.
 Kubańczycy mogą w ten sposób czerpać prąd elektryczny o potrzebnych im napięciach prosto z takich transformatorów, które w dodatku zapewniają izolacje galwaniczną od sieci trakcyjnej (w pewnym stopniu zabezpiecza to przed przebiciem, a pamiętajmy, że urządzenia elektroniczne na Kubie kosztują wielokrotność pensji).
 \par Przejeżdżając przez Remedios gps skierował nas na drogę, która nie była jeszcze zbudowana.
 Ratowaliśmy się objazdem licząc, że trasa zaktualizuje się na jakąś przejezdną.
 Stało się natomiast dokładnie na odwrót.
-Jadąc zgodnie z nawigacja zostaliśmy poinstruowani, aby skręcić w lewo prosto w betonowy mur.
+Jadąc zgodnie z nawigacją zostaliśmy poinstruowani, aby skręcić w lewo prosto w betonowy mur.
 Porzuciliśmy pomoc elektroniczną i spróbowaliśmy wyjechać z miasta intuicyjnie.
 Widzieliśmy na mapie, że dzieli nas od tego wspomniany w wcześniej skręt w lewo, więc błądząc naokoło próbowaliśmy dostać się na tamtą drogę za pomocą plątaniny osiedlowych ścieżek.
 Kosztowało nas to kilka chwil frustracji, ale w końcu udało nam się wyplątać i wróciliśmy na dobry tor.
@@ -40,7 +43,7 @@ Dziś każdy z handlarzy wymachiwał dosyć sporą tacką, na której trzymał d
 
 \szQuote{Wszyscy mieli identyczne ciasto.}
 \noindent Zastanawiam się, jak to w ogóle funkcjonuje.
-Może codziennie rano przejeżdża tędy ciężarówka zostawiając ich z porcja towarów, a wieczorem zgarnia i zbiera przychody?
+Może codziennie rano przejeżdża tędy ciężarówka zostawiając ich z porcją towarów, a wieczorem zgarnia i zbiera przychody?
 Brzmi to okropnie abstrakcyjnie, ale nie przychodzi mi do głowy żadne inne wytłumaczenie.
 \par W Matanzas zaparkowaliśmy i poszliśmy pieszo szukać noclegu.
 Udało nam się przy pierwszym podejściu, choć początkowo zapowiadało się, że dom będzie opustoszały.
