--- a/book/dzien12.tex
+++ b/book/dzien12.tex
@@ -1,10 +1,10 @@
 
 \chapter[Próba nożnego odpalenia konia]{Dzień 12 - Próba nożnego odpalenia konia}
 
-Obudziliśmy się niezbyt wyspani, najprawdopodobniej z powodu głośno pracującej przez cała noc klimatyzacji.
+Obudziliśmy się niezbyt wyspani, najprawdopodobniej z powodu głośno pracującej przez całą noc klimatyzacji.
 Zdziwiłem się, bo specjalnie ustawiłem ją w tryb „super quiet” i na początku z tego co pamiętam działało.
 Śniadanie u Esmeraldy było dosyć ubogie, ale zupełnie nam wystarczyło.
-Podany nam sok z mango pochodził rzekomo z jej własnych zbiorów.
+Podany sok z mango pochodził rzekomo z jej własnych zbiorów.
 I faktycznie w smaku był dużo delikatniejszy, a przede wszystkim nie taki słodki jak te dotychczasowo przez nas pite.
 Spakowaliśmy się, zapłaciliśmy i pożegnaliśmy.
 Gdy wyjeżdżaliśmy z Matanzas udało nam się na pożegnanie stoczyć kolejny bój z gps’em.
@@ -29,7 +29,7 @@ Właściciel nawet nam nie podziękował, ale zrobiła to reszta grupy pospolite
 \par W Hawanie zatrzymaliśmy się w północnej dzielnicy na płatnym parkingu.
 Stróż powiedział nam, że cena za godzinę wynosi 1 dolar, ale za 4 dolary możemy stać tu cały dzień, bo on nigdzie się nie rusza.
 Zostawiliśmy samochód pod jego opieką i poszliśmy do sklepu z rumem i cygarami - 
-tym samym, który był ostatnim punktem odwiedzonym w Hawanie, gdy byliśmy tu za pierwszym razem.
+tego samego, który był ostatnim punktem odwiedzonym w Hawanie, gdy byliśmy tu za pierwszym razem.
 Każdy z nas uzupełnił zapasy kubańskich dóbr do ilości, którą chcieliśmy zabrać do Polski.
 Przed wylotem chcieliśmy jeszcze zwiedzić słynny cmentarz w Hawanie: Necrópolis de Cristóbal Colon.
 Znajdował się on ponad godzinę pieszej drogi od nas, ale mieliśmy dużo czasu, więc zdecydowaliśmy się na taki spacer.
@@ -65,7 +65,7 @@ Oby służyła mu jako talizman na szczęście.
 \par W centrum zjedliśmy obiad, a właściwie Kozi zjadł, bo ja przed podróżą nic nie jadam.
 Wypiłem tylko lemoniadę z lodem, za to Kozi zamówił sobie makaron z sosem bolognese.
 Po posiłku wróciliśmy pieszo do samochodu i pojechaliśmy na lotnisko.
-Gdy dojechaliśmy na parking samochodów wynajmowanych spojrzeliśmy na licznik. Wypożyczając auto spisaliśmy w umowie jego stan, przez co wiedzieliśmy dokładnie, ile kilometrów pokonaliśmy. Nasz trzeci kompan pozwolił nam przebyć łącznie trasę 3003km.
+Gdy dojechaliśmy na parking samochodów wynajmowanych, spojrzeliśmy na licznik. Wypożyczając auto spisaliśmy w umowie jego stan, przez co wiedzieliśmy dokładnie, ile kilometrów pokonaliśmy. Nasz trzeci kompan pozwolił nam przebyć łącznie trasę 3003 km.
 Stojąc na parkingu spakowaliśmy kupione tego samego dnia butelki rumu tak, aby możliwie zabezpieczyć je w transporcie, po czym zabraliśmy swoje bagaże i ruszyliśmy oddać samochód, którym Kubę objechaliśmy dookoła.
 W Internecie krążą plotki, że Kubańczycy starają się na siłę znaleźć jakieś wady w samochodzie, żeby uszczknąć na kaucji.
 Nas to akurat nie spotkało - może dlatego, że samochód był prawie nowy, przez co dostaliśmy go bez wad, no i oddaliśmy również bez, był jedynie brudny z wszechobecnej na Kubie pomarańczowej ziemi.
