--- a/book/dzien06.tex
+++ b/book/dzien06.tex
@@ -11,10 +11,10 @@ Wyróżniało się tym, że zamiast smoothie był (prosto z lodówki!) dzbanek s
 Na stole były też okrągłe herbatnikowe ciasteczka, ale były tak bardzo średnie, że prawie zapomniałem o tym wspomnieć.
 W nocy nasz zaparkowany na ulicy samochód był pilnowany przez lokalny patrol sąsiedzki. 
 Wiem o tym dlatego, że przyszło nam za niego zapłacić trzy dolary.
-\par Wyjeżdżając z Trinidadu zatrzymaliśmy się w banku, aby wypłacić kolejna porcję gotówki, zgodnie z dziennym limitem transakcji. 
+\par Wyjeżdżając z Trinidadu zatrzymaliśmy się w banku, aby wypłacić kolejną porcję gotówki, zgodnie z dziennym limitem transakcji. 
 Tym razem udało się bez żadnych przeszkód - zupełnie nie w stylu naszych poprzednich styczności z bankowością na Kubie.
 Zapakowaliśmy się w auto i podążając za gps’em ruszyliśmy do Camegüey. 
-Jednokierunkowe uliczki Trinidadu w końcu zebrały z nas swoje żniwo i udało nam się w jedna z nich wjechać pod prąd.
+Jednokierunkowe uliczki Trinidadu w końcu zebrały z nas swoje żniwo i udało nam się w jedną z nich wjechać pod prąd.
 Wywołało to burzliwą reakcję otoczenia: przechodnie zaczęli machać na nas rękami i wściekle gwizdać. Gdy zobaczyli, że mimo to próbujemy wyjechać w złym kierunku, dołożyli większych starań i machali dużo bardziej energicznie. Niestety - ich szamańskie zaklęcie nie obróciło nas w dobrą stronę.
 Co więcej - uciekając z tej jednokierunkowej uliczki udało nam się wjechać pod prąd w kolejną, co tylko bardziej rozjuszyło tłum. 
 Na szczęście po chwili byliśmy już na właściwym torze i cała ta wrzawa ustała. 
@@ -24,7 +24,7 @@ Droga oczywiście była dziurawa, ale nie na tyle żeby trzeba było specjalnie 
 Statystycznie rzecz ujmując - im bardziej górzyste są krajobrazy dookoła drogi, tam bardziej jest ona dziurawa.
 Droga do Camegüey była śliczna! 
 Z trochę większego bliska oglądaliśmy teraz to, co wcześniej widzieliśmy z punktu widokowego.
-Mój tata - emerytowany kierownik logistyczny budownictwa drogowego - opowiadał mi kiedyś o profilowania zakrętów. 
+Mój tata - emerytowany kierownik logistyczny budownictwa drogowego - opowiadał mi kiedyś o profilowaniu zakrętów. 
 Zakręt powinien mieć takie nachylenie, aby siła dośrodkowa dociskała pojazd do nawierzchni. 
 Dziś komputerowo sterowane maszyny kładą asfalt tworząc precyzyjnie dopasowany kąt profilu nawierzchni, ale kiedyś robione to było na oko i finalna jakość była „taka jak operatorowi wyszło”. 
 Kubańskie budownictwo jest jeszcze na tamtym etapie rozwoju, a przynajmniej tak wnioskuję z przechylonych do zewnątrz zakrętów. 
@@ -32,12 +32,12 @@ Wspomniane przeze mnie wcześniej jedyne rośliny na Kubie posiadające ogromne 
 Mijaliśmy jej plantację!
 Nie dopatrzyłem się za to na nich żadnych owoców, więc albo jeszcze nie owocuje, albo jej zbiory stanowią inną część rośliny albo jest już po zbiorach. 
 Ta ostatnia opcja wydaje mi się najbardziej prawdopodobna.
-\par Nasz pierwotny plan zakładał spędzenie w Trinidadzie dwóch dni, za to na ostatniej prostej do Hawany przewidywał 14sto godzinną jazdę. 
+\par Nasz pierwotny plan zakładał spędzenie w Trinidadzie dwóch dni, za to na ostatniej prostej do Hawany przewidywał czternastogodzinną jazdę. 
 Postanowiliśmy go trochę przebudować, aby rozbić tak długi trip na dwa mniejsze, kosztem czego ucięliśmy wspomnimy drugi dzień przeznaczony na plażowanie przy Morzu Karaibskim. 
-Zamiast niego plażować będziemy w drodze powrotnej - w Oceanie Atlantyckim.
+Zamiast niego plażować będziemy w drodze powrotnej - nad Oceanem Atlantyckim.
 \par W drodze do Camegüey przejeżdżaliśmy przez kubańską Florydę - miasto o właśnie takiej nazwie.
 Architektonicznie było bardzo podobne do Viñales, z tą jedną różnicą, że budynki były w iście hawańskim stanie agonalnym. 
-Gdy dojechaliśmy do Camegüey, w pierwszej kolejności udaliśmy się na stację benzynową i na nasze nieszczęście - nie było tu benzyny 94ro oktanowej. 
+Gdy dojechaliśmy do Camegüey, w pierwszej kolejności udaliśmy się na stację benzynową i na nasze nieszczęście - nie było tu benzyny 94-ro oktanowej. 
 W związku z tym, że najbliższa stacja była dopiero na drugim końcu miasta - skierowaliśmy się do centrum w poszukiwaniu noclegu, a tankowanie odłożyliśmy na jutrzejszy poranek - przed wyjazdem. 
 Wybraliśmy z mapy jeden o dosyć wysokich ocenach, nazywający się Casa Conchita („casa” oznacza po hiszpańsku „dom”, z kolei hostel wynajmujący turystom pokój to „casa private”). 
 Przy wejściu zaczepił nas przechodzień i spytał, czy nie szukamy noclegu. My natomiast chcieliśmy skorzystać z tego wybranego przez nas - w końcu ma wysokie oceny. Dlatego z niechęcią pokazałem mu telefon z mapą i spróbowałem wytłumaczyć, że to jest właśnie miejsce, które chcielibyśmy obejrzeć. Na co on odparł:
@@ -64,7 +64,7 @@ Udaliśmy się tam i zaczęliśmy przeglądać menu.
 Tak jak do tej pory każde było hiszpańsko-angielskie, tak tutaj było czysto hiszpańskie. 
 Co więcej, wszystkie dania nazywały się „Table \#n”, gdzie n było liczbą od 1 do 8.
 Losując na loterii ja poprosiłem o Table \#4, Kozi natomiast wybrał jedynkę. 
-Z bębna maszyny losującej trafiły mi się krewetki, ryż z szynką i szczypiorkiem oraz ugotowany patat. 
+Z bębna maszyny losującej trafiły mi się krewetki, ryż z szynką i szczypiorkiem oraz ugotowany batat. 
 Koziemu natomiast danie identyczne oprócz krewetek, które zastąpione były kawałkami wieprzowiny z ogromna ilością tłuszczu z kolagenem. 
 Posiłek taki bez wątpienia był niezwykle pożywny, ale i niezbyt atrakcyjny smakowo.
 Mój za to był całkiem dobry, ciężko mi było narzekać. 
@@ -108,4 +108,4 @@ Przy wejściu przywitały nas posagi Paul’a, George’a, John’a i Ringo.
 Ku naszemu niezadowoleniu i tu nie było piwa.
 Zamówiliśmy za to pinacoladę i mojito, które okazało się bardzo dobre! 
 Z przyjemnością wypiliśmy jeszcze po dwa takie i wróciliśmy do pokoju.
-Nie było jeszcze specjalnie późno, bo powoli dochodziła godzina 21sza, ale zmęczenie bezlitośnie pociągnęło mnie do snu.
+Nie było jeszcze specjalnie późno, bo powoli dochodziła godzina 21-sza, ale zmęczenie bezlitośnie pociągnęło mnie do snu.
