--- a/book/dzien08.tex
+++ b/book/dzien08.tex
@@ -9,7 +9,7 @@ Chciałem powstrzymać negatywne nastawienie, ale przygotowane nam śniadanie do
 Omlet pływał w tłuszczu, kawałki melona smakowały jak wyciągnięte z puszki, a jedyną formą mięsa były pieczone kawałki schabu, niestety również strasznie tłuste, chyba smażone razem z jajkami.
 Podziękowaliśmy i odjechaliśmy.
 Ostatnim punktem do odhaczenia było napełnienie baku do pełna.
-Odwiedziliśmy dwie stacje benzynowe, ale żadna nie oferowała benzyny 94ro oktanowej.
+Odwiedziliśmy dwie stacje benzynowe, ale żadna nie oferowała benzyny 94-ro oktanowej.
 Opuściliśmy więc miasto i udaliśmy się w trasę, nawigację ustawiając na kolejne stacje przy drodze.
 Poczuliśmy się trochę zagrożeni, gdy poziom paliwa z każdym kilometrem malał, a stacja w Alto Songo również nie pozwoliła nam napełnić baku.
 Na całe szczęście kawałek dalej, w Le Maya w końcu nam się udało i pewni siebie skierowaliśmy nawigację na Baracoa.
@@ -44,7 +44,7 @@ Po pewnym czasie wyszedłem na brzeg i oboje odczekaliśmy trochę czasu, aby wy
 Następnie przebraliśmy się, zapakowaliśmy w auto i ruszyliśmy w dalszą trasę.
 Kawałek dalej znowu zostaliśmy zatrzymani przez policję.
 Tym razem nie zdążyliśmy nawet wyciągnąć paszportów - gdy policja usłyszała, że mówimy jedynie po angielsku puściła nas dalej.
-Może ktoś podobnym do naszego autem jest tu poszukiwany?
+Może ktoś z podobnym do naszego autem jest tu poszukiwany?
 Kto wie, mam nadzieję, że nie przysporzy nam to problemów.
 \par Droga do Baracoa odbiła na północ i wkroczyła pomiędzy góry.
 Zakręty zaczęły się robić coraz ciaśniejsze i bardziej kręte.
@@ -59,7 +59,7 @@ Właścicielkę pokoju nazwaliśmy Mariją.
 Pokój znajdował się na piętrze i na dwóch z jego ścian była kaskada małych okienek.
 Każdy z nich miało jedne drewniane drzwiczki, które otwierane były w sposób podobny do zaworów wodnych.
 Obracały się względem osi przechodzącej przez środek drzwiczek tak, że ich pozycja zamknięta zamykała okno, a otwarta skierowana była równolegle do przepływu światła i powietrza.
-To rozwiązanie jest bardzo proste - dzięki czemu takie okna są tanie i można ich zamontować więcej na ścianie - jak i dosyć wydajne, bo w ten sposób więcej okien oznacza większy przepływ powietrza - stąd znajdowały się one na dwóch ścianach pokoju zapewniając przepływ powietrza.
+To rozwiązanie jest bardzo proste - dzięki czemu takie okna są tanie i można ich zamontować więcej na ścianie - jak i dosyć wydajne, bo w ten sposób więcej okien oznacza większy przepływ powietrza - stąd znajdowały się one aż na dwóch ścianach pokoju.
 Jest tylko jeden mankament - okna takie nie są właściwie wcale dźwiękoszczelne.
 \par Wyruszyliśmy na obiad w kierunku pizzerii, zgodnie z moim życzeniem.
 Jedliśmy na Kubie różne rzeczy, ale pizzy jeszcze nie.
@@ -84,7 +84,7 @@ Mieliśmy tam szukać kobiety o imieniu Stokrotka (nie po polsku oczywiście), k
 Za to zaproponowała nam, że o ile - jak sama powiedziała - to ona jest królową kakao, tak nas może oprowadzić jej córka - księżniczka kakao.
 Zostaliśmy poprowadzeni na pola kakaowe.
 Był to moment, w którym jedna z zagadek Kuby, która trapiła mnie od dawna została rozwiązana.
-Na polach znajdowały się trzy rodzaje roślin: kawowiec, którego mieliśmy okazje widzieć już wcześniej, kakaowiec - podobne do niego drzewko, może trochę większe, z mnóstwem paczkujących kwiatów lub całymi już owocami kakaowca, oraz trzeci rodzaj: średniej wielkości palma z ogromnymi rozłożystymi liśćmi.
+Na polach znajdowały się trzy rodzaje roślin: kawowiec, którego mieliśmy okazje widzieć już wcześniej, kakaowiec - podobne do niego drzewko, może trochę większe, z mnóstwem pączkujących kwiatów lub całymi już owocami kakaowca, oraz trzeci rodzaj: średniej wielkości palma z ogromnymi rozłożystymi liśćmi.
 Był to bananowiec!
 Możliwe, że plantacja bananowca którą wcześniej widziałem przy drodze była już po zbiorach lub zwyczajnie jadąc dosyć szybko samochodem nie zauważyłem zielonych jeszcze kiści bananów ukrytych pod tymi ogromnymi liśćmi.
 Bananowce sadzi się na plantacjach kakao, aby chronić drzewa kakaowe przed słońcem.
@@ -96,14 +96,14 @@ Gromadzi się je w koszykach i pod przykryciem z liści bananowca zostawia do sf
 Gdy są już gotowe, odsącza się je z powstałego płynu - likieru kakaowego i suszy, a następnie mieli w młynkach ręcznych.
 Powstaje w ten sposób ciapka, która podgotowana rozpada się na masło kakaowe i pozostałości.
 Samo masło jest składnikiem produkcji czekolady, ale funkcjonuje też jako kosmetyk nawilżający skórę.
-Lokalna produkcja wyrobów czekoladowych wyrabia też i samo masło, ale większość powstałej po zmieleniu ciapki w całości formowana jest w kulki o promieniu około 7cm i suszona, następnie kulki takie tarte są na proszek na ręcznych tarkach.
+Lokalna produkcja wyrobów czekoladowych wyrabia też i samo masło, ale większość powstałej po zmieleniu ciapki w całości formowana jest w kulki o promieniu około 7 cm i suszona, następnie kulki takie tarte są na proszek na ręcznych tarkach.
 Z proszku powstaje tu gorzka czekolada lub jedna z dwóch mieszanek czekolad słodkich: z proszkiem bananowym i cynamonem, oraz proszkiem bananowym i miodem.
 Fabryki czekolady produkują z owoców półprodukty: znane nam kakao naturalne i masło kakaowe.
 Lokalna produkcja do wyrobów czekolady korzystała ze składników bez wydzielonego masła, fabryka zaś wysyła je dalej, gdzie ponownie są łączone w odpowiednich proporcjach i powstaje produkt bardziej jakościowy.
 Natomiast moim zdaniem - czekoladkom z farmy niczego nie brakowało!
 \par Po wycieczce pojechaliśmy do Yumuri, wioski nieopodal Baracoa.
 Przejechaliśmy przez most, u stóp którego leżała przystań, wróciliśmy się więc zaparkować i poszukać wypożyczalni łódek.
-Zanim dojechaliśmy do końca mostu na drogę wybiegł nam jakiś mężczyzna i usilnie pukał w szybę, aż skręciliśmy ją na dół.
+Zanim dojechaliśmy do końca mostu na drogę wybiegł nam jakiś mężczyzna i usilnie pukał w szybę, aż opuściliśmy ją na dół.
 Powiedział nam, że jest tu przewodnikiem i może zaoferować nam wycieczkę wodną.
 Oczywiście gdy tylko dojechaliśmy do wskazanego przez niego parkingu okazał się on płatny.
 Wydaje mi się jednak, że jest tak samo płatny jak niektóre darmowe parkingi w samym centrum Katowic.
