--- a/book/dzien10.tex
+++ b/book/dzien10.tex
@@ -16,14 +16,14 @@ Jesteśmy w końcu na wakacjach.
 \par Wyjeżdżając z La Boca, udało nam się zatankować na pierwszej napotkanej stacji benzynowej.
 Zarówno my, jak i Kubańczycy jeździmy bez włączonych świateł.
 W dzień nie są tu wymagane, za to w nocy są niezbędne, aby omijać dziury w drodze - co nas nie dotyczy, ponieważ w nocy nie jeździmy.
-Nie jestem pewien czy na Kubie wymagane jest posiadanie czerwonych świateł stopu z tylu pojazdu.
+Nie jestem pewien czy na Kubie wymagane jest posiadanie czerwonych świateł stopu z tyłu pojazdu.
 Oczywiście każdy samochód posiada tu takie światła, ale niejednokrotnie nadzialiśmy się na to, że nie świeciły.
 Wydarzyło się to między innymi w Chambas, gdzie ledwo wyhamowaliśmy przed cysterną, która nagle zatrzymała się zarówno bez kierunkowskazu, jak i świateł stopu.
 Ruch drogowy nie jest tu duży, ale Kubańczycy ponownie stają na wysokości zadania i też mają swoje zagrożenia na drodze.
 W Yaguajay zatrzymaliśmy się na stacji benzynowej, aby uzupełnić paliwo.
-Podczas gdy Kozi tankował, ja miałem okazję podziwiać zmagania kierowcy najprawdopodobniej 70cio letniego niebieskiego Pontiaca.
-Podjechał on pod dystrybutor z dieslem, skręcił szybę, a następnie sięgnął na zewnątrz ręką, aby otworzyć sobie drzwi kierowcy.
-Następnie wysiadł, a puszczone drzwi bezwładnie oparły się o nadwozie samochodu, wisząc tak krzywo, że ciężko było mi uwierzyć, że przed chwila zamykały konstrukcje.
+Podczas gdy Kozi tankował, ja miałem okazję podziwiać zmagania kierowcy najprawdopodobniej 70-cio letniego niebieskiego Pontiaca.
+Podjechał on pod dystrybutor z dieslem, opuścił szybę, a następnie sięgnął na zewnątrz ręką, aby otworzyć sobie drzwi kierowcy.
+Następnie wysiadł, a puszczone drzwi bezwładnie oparły się o nadwozie samochodu, wisząc tak krzywo, że ciężko było mi uwierzyć, że przed chwila zamykały konstrukcję.
 Kierowca wrócił i otworzył bagażnik.
 Jak się okazało, pomimo widocznego wlewu paliwa z boku samochodu, wlewa się je do bagażnika.
 Następnie wrócił do okienka zapłacić, po czym wsiadł do auta, magicznie zamknął niedopasowane drzwi odpowiednim trzaśnięciem i przystąpił do uruchamiania silnika.
@@ -33,17 +33,17 @@ Szczerze mówiąc i tak jestem pod wrażeniem, że pojazd nadal jeździ.
 Co więcej: taksówki w Hawanie dają radę bez tych wszystkich cyrków, a też mają jakieś 70 lat.
 Po paru godzinach dojechaliśmy w okolice Caibarién, skąd odbiliśmy na północ, na wyspę Cayo Santa Maria.
 Wyspa ta połączona jest drogą położoną na usypanym pasie lądu.
-Trasa ta mierzy blisko 50km.
+Trasa ta mierzy blisko 50 km.
 Wjeżdżając na nią przeszliśmy kontrolę paszportów i musieliśmy uiścić opłatę w wysokości 2 dolarów.
 Cena ta wydaje się śmiesznie mała w porównaniu z naszą polską autostradą na linii Katowice-Kraków.
 \par W sierpniu 2017 roku w Kubę uderzył huragan Irma, który punktowo zniszczył tę trasę.
-Została ona w zdecydowanej większości naprawiona, ale niektóre jej fragmenty wykluczone były z użycia do dzisiaj.
+Została ona w zdecydowanej większości naprawiona, ale niektóre jej fragmenty są wykluczone z użycia do dzisiaj.
 Między innymi jeden z mostów, na którego środku była spora dziura. Pewnie moglibyśmy ją ominąć, ale raczej nie byłoby to zbyt bezpieczne, bo taki wyłom najprawdopodobniej nadwyrężył strukturę konstrukcji.
 Kubańczycy rozwiązali ten problem dookoła - dosłownie.
 Obok mostu usypany był łuk, na którym zbudowano drogę.
 
 \szQuote{Czasem łatwiej jest dorobić drogę obok, niż załatać dziurę w moście.}
-\noindent Naszym hotelem okazał się być 5cio gwiazdkowy Playa Cayo Santa Marta.
+\noindent Naszym hotelem okazał się być 5-cio gwiazdkowy Playa Cayo Santa Marta.
 Zajechaliśmy na miejsce i wysiedliśmy z samochodu.
 Już po chwili podbiegł do nas stróż parkingu z daleka gwiżdżąc na nas, abyśmy zwrócili na niego uwagę.
 Kubańczycy mają paskudny zwyczaj gwizdać na ludzi, od których czegoś chcą.
